Update manual about cluster version issue

--- a/doc/USER_MANUAL/02_getting_started.tex
+++ b/doc/USER_MANUAL/02_getting_started.tex
@@ -122,6 +122,11 @@ We recommend that you add {\texttt{ulimit -S -s unlimited}} to your
 unlimited }} to your {\texttt{.cshrc}} file to suppress any potential
 limit to the size of the Unix stack.\\
 
+Beware that some cluster systems that run a recent version many not run and\slash compile an older version of the code. \\
+
+
+
+
 %-----------------------------------------------------------------------------------------------------------------------------------%
 \section{Using the GPU version of the code}
 %-----------------------------------------------------------------------------------------------------------------------------------%
