Update manual about dynamic fault config parameters

--- a/doc/USER_MANUAL/02_getting_started.tex
+++ b/doc/USER_MANUAL/02_getting_started.tex
@@ -124,7 +124,8 @@ limit to the size of the Unix stack.\\
 
 Beware that some cluster systems that run a recent version many not run and\slash compile an older version of the code. \\
 
-
+When using dynamic fault in parallel with the developer version, we suggest you to set the configuration parameters 
+of {\texttt{FAULT_DISPL_VELOC}} and {\texttt{FAULT_SYNCHRONIZE_ACCEL}} as {\texttt{.true.}}.\\
 
 
 %-----------------------------------------------------------------------------------------------------------------------------------%
