--- a/doc/USER_MANUAL/02_getting_started.tex
+++ b/doc/USER_MANUAL/02_getting_started.tex
@@ -125,7 +125,7 @@ limit to the size of the Unix stack.\\
 Beware that some cluster systems that run a recent version may not run and\slash compile an older version of the code. \\
 
 When using dynamic fault in parallel with the developer version, we suggest you to set the configuration parameters
-of {\texttt{FAULT_DISPL_VELOC}} and {\texttt{FAULT_SYNCHRONIZE_ACCEL}} as {\texttt{.true.}}.\\
+of \texttt{FAULT\_DISPL\_VELOC} and \texttt{FAULT\_SYNCHRONIZE\_ACCEL} as \texttt{.true.}.\\
 
 %-----------------------------------------------------------------------------------------------------------------------------------%
 \section{Using the GPU version of the code}
