--- a/doc/USER_MANUAL/06_fault_sources.tex
+++ b/doc/USER_MANUAL/06_fault_sources.tex
@@ -143,11 +143,12 @@ in Section \ref{sec:Sign-Convention-for}).\end{itemize}
 \item [{Outputs:}] file $\mathtt{fault\_file\_X.dat}$, where X is the
 fault id (id\_fault).
 \item [{Example:}] For the example in Section \ref{sec:Mesh-Generation-with}:
+{\footnotesize
 \begin{verbatim}
   A1 = [168]
   A2 = [160]
   fault_input(1,A1,A2)
-\end{verbatim}
+\end{verbatim}}
 \end{description}
 
 \section{Examples}
@@ -233,32 +234,25 @@ Only used for outputs.
 
 The rest of this file is made of namelist input blocks (see \textquotedbl{}namelist\textquotedbl{}
 in a Fortran 9x manual). The input for each fault has the following
-sequence (arguments in {[}brackets{]} are optional):
-
-\&\textbf{RUPTURE\_SWITCHES}  /
-RATE\_AND\_STATE ,TPV16 ,HETE\_RSF ,TPV10X ,TWF
-
-\&\textbf{BEGIN\_FAULT} /
-
-\&\textbf{STRESS\_TENSOR} Sigma = $\sigma_{xx}$,$\sigma_{yy}$,$\sigma_{zz}$,$\sigma_{xy}$,$\sigma_{xz}$,$\sigma_{yz}$ /
+sequence (arguments in {[}brackets{]} are optional):\\
 
 
+\&\textbf{RUPTURE\_SWITCHES}  / RATE\_AND\_STATE ,TPV16 ,HETE\_RSF ,TPV10X ,TWF\\
+\&\textbf{BEGIN\_FAULT} /\\
+\&\textbf{STRESS\_TENSOR} Sigma = $\sigma_{xx}$,$\sigma_{yy}$,$\sigma_{zz}$,$\sigma_{xy}$,$\sigma_{xz}$,$\sigma_{yz}$ /\\
+\&\textbf{INIT\_STRESS} S1, S2, S3 {[},n1, n2, n3{]} /\\
 
-\&\textbf{INIT\_STRESS} S1, S2, S3 {[},n1, n2, n3{]} /
+
+followed by (n1+n2+n3) \&\textbf{DIST2D} blocks\\
 
 
-followed by (n1+n2+n3) \&\textbf{DIST2D} blocks
-
-
-\&\textbf{SWF} mus, mud, dc {[}, nmus, nmud, ndc{]} (weakening_kind=1 for linear (default); weakening_kind=2 for exponential)/
-
-\&\textbf{TWF} nuc\_x, nuc\_y, nuc\_z, nuc\_r, nuc\_t0, nuc\_v /
-
-\&\textbf{RSF} V0,f0,a,b,L,V\_init,theta\_init,C,StateLaw {[} nV0,nf0,na,nb,nL,nV\_init,ntheta\_init,nC {]} /
-
+\&\textbf{SWF} mus, mud, dc {[}, nmus, nmud, ndc{]} (weakening\_kind=1 for linear (default); weakening\_kind=2 for exponential) /\\
+\&\textbf{TWF} nuc\_x, nuc\_y, nuc\_z, nuc\_r, nuc\_t0, nuc\_v /\\
+\&\textbf{RSF} V0,f0,a,b,L,V\_init,theta\_init,C,StateLaw {[} nV0,nf0,na,nb,nL,nV\_init,ntheta\_init,nC {]} /\\
 
 
 followed by (nV0+nf0+na+nb+nL+nV\_init+ntheta\_init+nC) \&\textbf{DIST2D} blocks\\
+
 
 \begin{lyxlist}{00.00.0000}
 \item [{\&\textbf{RUPTURE\_SWITCHES}}] input block sets some switches in the simulation process.
@@ -321,7 +315,7 @@ of the fault:
 \item [{ndc}] = number of heterogeneous items for critical slip-weakening
 distance {[}default is 0{]}
 \item [{nC}] = number of heterogeneous items for cohesion
-\item [{weakening_kind}] = 1 for linear slip-weakening law (default); 2 for exponential slip-weakening law:
+\item [{weakening\_kind}] = 1 for linear slip-weakening law (default); 2 for exponential slip-weakening law:
                             $$\mu = \mu_d + (\mu_s-\mu_d) exp(-\frac{u}{d_c}) $$
 \end{description}
 
