--- a/EXAMPLES/BENCHMARK_CLAERBOUT_ADJOINT/README
+++ b/EXAMPLES/BENCHMARK_CLAERBOUT_ADJOINT/README
@@ -4,8 +4,9 @@ README
 
 This directory holds the following kernel benchmarks:
 
-- ACOUSTIC: to test purely acoustic kernels (K_rho & K_alpha)
-- ELASTIC : to test purely elastic kernels (K_rho, K_alpha & K_beta)
+- ACOUSTIC         - to test purely acoustic kernels (K_rho & K_alpha)
+- ELASTIC          - to test purely elastic kernels (K_rho, K_alpha & K_beta)
+- ACOUSTIC_ELASTIC - to test coupled acoustic-elastic kernels 
 
 To run the example, change directory to ACOUSTIC/ or ELASTIC/ and run script:
 > ./run_inhomogeneous.bash
