--- a/doc/USER_MANUAL/04_creating_databases.tex
+++ b/doc/USER_MANUAL/04_creating_databases.tex
@@ -199,7 +199,7 @@ absorbing conditions can become unstable.}
 If you plan to use a Dirac source, then use the dominant frequency of the source wavelet
 with which you plan to convolve your seismograms later on in post-processing.
 \item [{\texttt{STACEY\_ABSORBING\_CONDITIONS}}] Set to \texttt{.true.}
-to turn on Clayton-Enquist absorbing boundary conditions (see \citet{KoTr99}).
+to turn on Clayton-Engquist absorbing boundary conditions (see \citet{KoTr99}).
 In almost all cases it is much better to use CPML absorbing layers
 (see the options above) and leave this flag to \texttt{.false.}.
 \item [{\texttt{STACEY\_INSTEAD\_OF\_FREE\_SURFACE}}] Set to \texttt{.true.}
