--- a/doc/USER_MANUAL/11_graphics.tex
+++ b/doc/USER_MANUAL/11_graphics.tex
@@ -141,7 +141,7 @@ The output is saved by each processor at the time interval specified
 by
 \texttt{\small NTSTEP\_BETWEEN\_FRAMES}.
 For all domains,
-the velocity field is output to files:
+the either the velocity or displacement field is output to files (depending on setting \texttt{SAVE\_DISPLACEMENT}):
 {\small
 \begin{verbatim}
 proc??????_velocity_X_it??????.bin
@@ -150,8 +150,17 @@ proc??????_velocity_Z_it??????.bin
 \end{verbatim}
 }
 \noindent
-For elastic domains, the divergence and curl taken from the velocity field,
-i.e. $\nabla\cdot{\bf {v}}$ and $\nabla\times{\bf {v}}$, get stored
+or
+{\small
+\begin{verbatim}
+proc??????_displ_X_it??????.bin
+proc??????_displ_Y_it??????.bin
+proc??????_displ_Z_it??????.bin
+\end{verbatim}
+}
+\noindent
+For elastic domains, the divergence and curl taken from the velocity (or displacement) field,
+i.e. $\nabla\cdot{\bf {v}}$ and $\nabla\times{\bf {v}}$ (or $\nabla\cdot{\bf {d}}$ and $\nabla\times{\bf {d}}$), get stored
 as well:
 {\small
 \begin{verbatim}
