--- a/doc/USER_MANUAL/manual_SPECFEM3D_Cartesian.tex
+++ b/doc/USER_MANUAL/manual_SPECFEM3D_Cartesian.tex
@@ -13,6 +13,7 @@
 \usepackage{tocbibind}
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
+\usepackage{enumitem}
 
 \usepackage{babel}
 \usepackage{float}
