--- a/doc/USER_MANUAL/06_fault_sources.tex
+++ b/doc/USER_MANUAL/06_fault_sources.tex
@@ -250,7 +250,7 @@ RATE\_AND\_STATE ,TPV16 ,HETE\_RSF ,TPV10X ,TWF
 followed by (n1+n2+n3) \&\textbf{DIST2D} blocks
 
 
-\&\textbf{SWF} mus, mud, dc {[}, nmus, nmud, ndc{]} (weakening\_kind=1 for linear (default); weakening\_kind=2 for exponential)/
+\&\textbf{SWF} mus, mud, dc {[}, nmus, nmud, ndc{]} /
 
 \&\textbf{TWF} nuc\_x, nuc\_y, nuc\_z, nuc\_r, nuc\_t0, nuc\_v /
 
@@ -321,8 +321,6 @@ of the fault:
 \item [{ndc}] = number of heterogeneous items for critical slip-weakening
 distance {[}default is 0{]}
 \item [{nC}] = number of heterogeneous items for cohesion
-\item [{weakening\_kind}] = 1 for linear slip-weakening law (default); 2 for exponential slip-weakening law:
-                            $$\mu = \mu_d + (\mu_s-\mu_d) exp(-\frac{u}{d_c}) $$
 \end{description}
 
 \item [{\&\textbf{TWF}}] input block sets the time-weakening friction parameters
@@ -387,19 +385,7 @@ and value valh at z = zc+lz/2 .
 
 
 $\;$sets a constant value (val) within a sphere with center (xc,yc,zc)
-and radius r.
-
-
-\&\textbf{DIST2D} shapeval='$\mathtt{read-from-file}$', filename
-/
-
-
-$\;$sets the name of the filename saved in the DATA directory. 
-The first line in the file shall be the number of data points and the 
-following lines in the file has the format: 
-x, y, z, val. Method of interpolation is nearest. 
-\\
-
+and radius r. \\
 
 
 \end{lyxlist}
