adds option (MOVIE_TYPE == 3) for shakemap to output geometric mean of horizontal PG-values

--- a/doc/USER_MANUAL/04_creating_databases.tex
+++ b/doc/USER_MANUAL/04_creating_databases.tex
@@ -216,7 +216,7 @@ make zmin free surface instead of absorbing condition.
 \noindent {\bf $\bullet$ Visualization setup}
 \begin{description}
 \item [{\texttt{CREATE\_SHAKEMAP}}] Set this flag to \texttt{.true.} to
-create a ShakeMap\textregistered{}, i.e., a peak ground velocity map
+create a ShakeMap\textregistered{}, e.g., a peak ground velocity map
 of the maximum absolute value of the two horizontal components of
 the velocity vector.
 \item [{\texttt{MOVIE\_SURFACE}}] Set to \texttt{.false.}, unless you want
