adds feature page

--- a/doc/USER_MANUAL/manual_SPECFEM3D_Cartesian.tex
+++ b/doc/USER_MANUAL/manual_SPECFEM3D_Cartesian.tex
@@ -230,6 +230,8 @@ Version 3.0}
 
 \include{15_informations_for_developers}
 
+\include{features}
+
 \include{bug_reports}
 
 \include{notes_and_acknowledgement}
