Update small issues in documentation [#1531]

--- a/doc/USER_MANUAL/authors.tex
+++ b/doc/USER_MANUAL/authors.tex
@@ -1,4 +1,4 @@
-\section*{Authors}
+\section*{https://specfem3d.readthedocs.io/en/latest/authors/}
 
 \noindent The SPECFEM3D package was first developed by Dimitri
 Komatitsch and Jean-Pierre Vilotte at Institut de Physique du Globe
@@ -14,62 +14,7 @@ We are deeply indebted and thankful to them for that.
 %%%%%%%% please do NOT merge the lines of the paragraph below, it makes it difficult to insert new names in alphabetical order; leave a single name per line
 %%%%%%%% please do NOT merge the lines of the paragraph below, it makes it difficult to insert new names in alphabetical order; leave a single name per line
 %%%%%%%% please do NOT merge the lines of the paragraph below, it makes it difficult to insert new names in alphabetical order; leave a single name per line
-Since then it has been developed and maintained by a development team: in alphabetical order,
-Michael Afanasiev,
-Jean-Paul (Pablo) Ampuero,
-\'Etienne Bachmann,
-Kangchen Bai,
-Piero Basini,
-C\'eline Blitz,
-Alexis Bottero,
-Ebru Bozda\u{g},
-Emanuele Casarotti,
-Joseph Charles,
-Min Chen,
-Paul Cristini,
-Cl\'ement Durochat,
-Percy Galvez,
-Hom Nath Gharti,
-Dominik G\"oddeke,
-Vala Hj\"orleifsd\'ottir,
-Sue Kientz,
-Dimitri Komatitsch,
-Jes\'us Labarta,
-Nicolas Le Goff,
-Pieyre Le Loher,
-Matthieu Lefebvre,
-Qinya Liu,
-Youshan Liu,
-David Luet,
-Yang Luo,
-Alessia Maggi,
-Federica Magnoni,
-Roland Martin,
-Ren\'e Matzen,
-Dennis McRitchie,
-Matthias Meschede,
-Peter Messmer,
-David Mich\'ea,
-Vadim Monteiller,
-Surendra Nadh Somala,
-Masaru Nagaso,
-Tarje Nissen-Meyer,
-Daniel Peter,
-Kevin Pouget,
-Max Rietmann,
-Elliott Sales de Andrade,
-Brian Savage,
-Bernhard Schuberth,
-Anne Sieminski,
-James Smith,
-Leif Strand,
-Carl Tape,
-Jeroen Tromp,
-Brice Videau,
-Jean-Pierre Vilotte,
-Zhinan Xie,
-Chang-Hua Zhang,
-Hejun Zhu.\\
+Nikhil Vaidyar
 
 The cover graphic of the manual was created by Santiago Lombeyda from
 Caltech's Center for Advanced Computing Research (CACR), USA, with free satellite clipart pictures
