--- a/doc/USER_MANUAL/bug_reports.tex
+++ b/doc/USER_MANUAL/bug_reports.tex
@@ -1,5 +1,5 @@
 \chapter*{Bug Reports and Suggestions for Improvements}\label{cha:Bug-Reports-and}
 
 To report bugs or suggest improvements to the code, please send an
-e-mail to the CIG Computational Seismology Mailing List \urlwithparentheses{cig-seismo@geodynamics.org}.
+e-mail to the CIG Computational Seismology Mailing List \urlwithparentheses{https://github.com/geodynamics/specfem3d/issues/new}.
 
